<resources>
    <string name="app_name">UGARideShare</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="current_points">Current Points:</string>
    <string name="create_a_new_ride">Create a New Ride</string>
    <string name="offer">Offer</string>
    <string name="request">Request</string>
    <string name="my_active_rides">My Active Rides</string>
</resources>