<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="12dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_points"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/points_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_new_ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_ride"
        android:backgroundTint="#1976D2"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="24dp"
        android:elevation="2dp"/>

</LinearLayout>